refactor(LottoInputView): readLottoInput 메서드 최적화